--- a/openGraph.html
+++ b/openGraph.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<!-- IE를 만났을 때 최신 버전(edge)의 방식으로 브라우저에 렌더링(변환) -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="description"
 		<title>Open Graph 연습</title>
 		<meta name="description" content="실제 업로드를 통해 확인할 문서입니다">
 
