--- a/openGraph.html
+++ b/openGraph.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="오픈그래피 연습">
 		<meta property="og:url" content="https://yeooosu.github.io/git3/openGraph.html">
 		<meta property="og:descripntion" content="여수진 오픈그래피 연습으로 깃허브를 통해 확인할 겁니다">
-		<meta property="og:image" content="https://yeooosu.github.io/git3/images/ogImage.png">
+		<meta property="og:image" content="https://yeooosu.github.io/git3/">
 
 	</head>
 	<body>
