진짜진짜 마지막 수정

--- a/openGraph.html
+++ b/openGraph.html
@@ -19,7 +19,7 @@
 		<ul>
 			<li>og:title 제목</li>
 			<li>og:description 설명</li>
-			<li>og:image 이미지/li>
+			<li>og:image 이미지</li>
 			<li>og:url 웹사이트 주소</li>			
 		</ul>
 
