--- a/openGraph.html
+++ b/openGraph.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="실제 업로드를 통해 확인할 문서입니다">
 
 		<meta property="og:title" content="오픈그래피 연습">
-		<meta property="og:url" content="https://yeooosu.github.io/git3/">
+		<meta property="og:url" content="https://yeooosu.github.io/git3/openGraph.html">
 		<meta property="og:descripntion" content="여수진 오픈그래피 연습으로 깃허브를 통해 확인할 겁니다">
 		<meta property="og:image" content="https://yeooosu.github.io/git3/images/ogImage.png">
 
